--- a/resumen-cap1.html
+++ b/resumen-cap1.html
@@ -8,7 +8,57 @@
 
 <body>
     <h1>Que se entendio del capitulo 1 de Elocuent Javascript</h1>
-    <p></p>
+    <p>Este capitulo como su nombre lo dice nos da las definiciones de valor y
+         operador y los diferentes tipos que existen de los mismos, ademas de 
+        una breve explicacion y ejemplos de su utilizacion.</p>
+
+    <p>Nos dice que un valor es una pieza de informacion formada por bits,
+        y estas piezas tinen diferentes roles en un programa, pueden ser numeros,
+        texto, boleanos o cosas mas complejas como funciones.</p>>
+
+     <p>Los numeros son representados directamente, cuando se invoca uno en la
+        memoria se graba el set de bits correspondiente a el, como las computadoras 
+        modernas son de 64 bits, los numeros que se pueden usar son 2^64, que son 
+        varios tetrallones.</p>
+
+     <p>Los strings son texto que igualmente es traducido a bits en la memoria, y
+        para invocarlos es necesario poner comillas a sus extremos. se pueden utilizar 
+        comillas siimples, dobles o backticks, siendo estas ultimas las que ofrecen 
+        mas propiedades al poder alvergar interpolaciones.</p>
+
+     <p>Los valores boleanos son verdadero y falso, y son ampliamente utilizados 
+        para realizar comparaciones y validaciones.</p>
+
+     <p>Existen los valores null y undefined que denotan la ausencia de valor y sus 
+        diferencias son por error en los origenes de javascript, siendo la gran 
+        mayoria de las veces intercambiables</p>
+
+     <p>Y estan los valores especiales que son infinito -infinito y NaN (not a number)
+    </p>
+
+     <p>Los operadores son los basicos de la aritmetica (suma , resta, multiplicacion
+        y division) aparte del modulo que es el residuo de la division entre 2 numeros
+    </p>
+
+     <p>Tambien existen los operadores logicos que son and, or y not, el primero es 
+        representado asi "&&" y sirve para validar entre dos valores, de manera que 
+        de ser "verdaderos"" los 2 su resultado es "verdadero", pero si alguno de ellos es
+        "falso", el resultado es igualmente "falso"</p>
+
+     <p>El operador or se representa || y este da de resultado true cuando al menos uno
+        de los valores es "verdadero"</p>
+
+     <p>Y not es un operador que "voltea" el valor que se le de !true es igual a false y
+        viceversa.</p>
+
+    <p>Tambien existen los operadores unarios como "typeof" y "-" que trabajan con un 
+        solo valor. Y los trinarios que requieren de tres valores, un bolenao y dos 
+        para seleccionar segun el boleano.</p>
+
+        <p>Tambien existen los operadores logicos de circuito corto que deciden entre 2
+        valores segun el primer verdadero "encontrado".</p>
+
+    </p>
 
 </body>
 
